fix(repo-client): address DM_NUMBER_CTOR